ПР Закрывающий тег. Вторая итерация. Исправлены критические комментарии

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   </head>
   <body class="page">
     <header class="header inline-size">
-      <h1 class="header__title">&lt;/HTML&gt;</h1>
-      <p class="header__subtitle">закрывающий тег</p>
+      <a class="logo">&lt;/HTML&gt;</a>
+      <p class="header__title">закрывающий тег</p>
       <nav class="theme-menu header__theme-menu">
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
         <ul class="theme-menu__list">
@@ -389,7 +389,7 @@
             <h2 class="dialog__title">Вставьте дискету, чтобы продолжить</h2>
           </div>
           <form method="dialog" class="dialog__form">
-            <button class="dialog__button button">
+            <button class="dialog__button button" type="submit">
                 <span class="button__text">ок</span>
             </button>
           </form> 
