Проектная работа Закрывающий тег. Третья итерация

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body class="page">
     <header class="header inline-size">
       <a class="logo">&lt;/HTML&gt;</a>
-      <p class="header__title">закрывающий тег</p>
+      <h1 class="header__title">закрывающий тег</h1>
       <nav class="theme-menu header__theme-menu">
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
         <ul class="theme-menu__list">
